# flake8-rst-docstrings

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.rst  README.rst  flake8_rst_docstrings.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
tests/: run_tests.sh  test_all.py  test_main.py
tests/RST201/: blocks.py
tests/RST202/: bullets.py
tests/RST203/: def_list.py
tests/RST204/: enumerated.py
tests/RST205/: explicit_markup.py
tests/RST206/: field_lists.py
tests/RST207/: literal.py
tests/RST208/: option_list.py
tests/RST210/: strong.py
tests/RST212/: short_underline.py
tests/RST213/: emphasis.py
tests/RST214/: literal.py  plurals.py
tests/RST215/: backticks.py  plurals.py
tests/RST216/: roles.py
tests/RST217/: roles.py
tests/RST218/: no_literal_block.py
tests/RST219/: bad_sub_ref.py
tests/RST220/: dup_explicit_target.py
tests/RST301/: nesting.py
tests/RST302/: table.py
tests/RST303/: sphinx-directives.py
tests/RST304/: __init__.py  sphinx-roles.py
tests/RST305/: subsitution.py  substitution.py
tests/RST306/: unknown_target.py
tests/RST307/: code_invalid_arg.py
tests/RST309/: sub_title.py
tests/RST401/: sub_title.py
tests/RST902/: bad_all.py
tests/test_cases/: example_unicode.py  explicit_signature.py  field_list_at_end.py  google_args_and_kwargs.py  noqa_args.py  noqa_noargs.py  not_utf8.py  numpy_args_and_kwargs.py  sphinx-needs.py  sphinx-py.py
